# mujoco_tutorial

./: CMakeLists.txt  LICENSE  MJDATA.TXT  MJMODEL.TXT  MUJOCO_LOG.TXT  double_pendulum.py  double_pendulum.xml  readme.md  test_mujoco.py  tippe_top.py
scripts/: MUJOCO_LOG.TXT  Viewer.py  Viewer_1.py  double_pendulum.xml  tendon.xml  test.py  test_dm.py  test_mujoco.py  tippe_top.py
scripts/Models/: ball.xml
src/: main.cpp
src/Models/: quadrotor_ground.xml
